# lm-toolkit

./: .gitignore  Makefile  README.md  pyproject.toml
configs/ds/: mteg-ita.yaml  mteg-retrieval-ita.yml
configs/model/: ModernBERT-base-ita.yaml  ModernBERT-base-ita.yml  embeddinggemma-300m.yaml  mmBERT-base.yaml  mmBERT-base.yml  opensearch-neural-sparse-encoding-multilingual-v1
configs/tools/: student_courses.yaml
lm_toolkit/: __init__.py  evaluate.py
lm_toolkit/backends/: __init__.py  base.py  openai.py
lm_toolkit/benchmarks/: tool_call.py
notebooks/: fine-tune-splade.ipynb
scripts/: evaluate_mteb.py  generate_expansions.py  generate_sparse_retrieval_comparison.py
scripts/splade/: evaluate_mteb.py  generate_sparse_retrieval_comparison.py  scrape_wikinews.py
scripts/tool_calls/: README.md  evaluate_tool_call.py
streamlits/: sparse_retrieval_comparison_app.py  splade_expansion_app.py
streamlits/splade/: sparse_retrieval_comparison_app.py
