[project]
name = "lm-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "mteb[xet]>=2.12.16",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
