[project]
name = "lm-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "mteb[bm25s,xet]>=2.12.16",
    "openai>=2.40.0",
    "ruff>=0.15.10",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.45.0",
]

